* access records not referred by hash table
  - flag if items are hashed

Performance improvement
* pre allocate item/directory array entries

Tools
* msiecfinfo
  - print cache directories
* msiecfexport
  - export to TSV ?
  - flexible output formatting
  - flexible date/time string formatting

In progress:
* record scan
  - flag entries in hash table as hashed

20150708
* worked on check signature

20150314
* updated version

20150313
* worked on Python bindings cache directory support

20150308
* worked on Python bindings cache directory support

20150106
* 2015 update

20141222
* worked on Python 3 support
* worked on tests

20141130
* code clean up

20141118
* code clean up

20141025
* changes for deployment

20141024
* changes for deployment
* changes for project site move

20141019
* changes for deployment

20141004
* bug fix in Python-bindings
* update Python-bindings tests

20140930
* removed README.macosx
* changes for project site move

20140731
* bug fix in Python-bindings

20140723
* worked on dpkg debug packages support

20140323
* worked on Python bindings

20140317
* worked on setup.py

20140131
* 2014 update
* updated dependencies

20131015
* updated dependencies
* updated msvscpp files

20131008
* improved pymsiecf as integer functions

20130929
* worked on setup.py, largely for MSI builds

20120923
* updated msvscpp files

20120922
* updated dependencies

20120806
* fixes for building with stand-alone libuna and libbfio

20120805
* updated dependencies
* bug fix in pymsiecf file object libbfio glue code
* worked on tests

20120529
* updated dependencies

20120528
* worked on pymsiecf simple inheritance of leak, redirected and url items

20120425
* worked on hash calculation

20120423
* added resource file to msvscpp files

20120421
* worked on tests

20120417
* bug fix in record scan due to recent dependency update

20120416
* code clean up

20120414
* textual changes
* worked on tests
* updates and bug fixes in pymsiecf