@@ -1,6 +1,6 @@
 # Files to ignore by git
 #
-# Version: 20141227
+# Version: 20150725
 
 # Generic auto-generated build files
 *~
@@ -33,6 +33,7 @@ stamp-h[1-9]
 /ABOUT-NLS
 /aclocal.m4
 /autom4te.cache/
+/build
 /compile
 /config.guess
 /config.log
@@ -41,6 +42,7 @@ stamp-h[1-9]
 /config.sub
 /configure
 /depcomp
+/dist
 /install-sh
 /libtool
 /ltmain.sh
@@ -110,13 +112,13 @@ stamp-h[1-9]
 /include/libmsiecf/types.h
 /libmsiecf/libmsiecf.rc
 /libmsiecf/libmsiecf_definitions.h
+/LICENSE.pymsiecf
 /msiecftools/msiecfexport
 /msiecftools/msiecfinfo
-/pymsiecf/setup.py
 /tests/input
 /tests/msiecf_test_open_close
 /tests/msiecf_test_set_ascii_codepage
-/tests/tmp
+/tests/tmp*
 
 # Local library dependencies specific files
 /libbfio
