@@ -47,6 +47,9 @@ GETTEXT_FILES = \
 PKGCONFIG_FILES = \
 	libmsiecf.pc.in
 
+SETUP_PY_FILES = \
+	setup.py
+
 SPEC_FILES = \
 	libmsiecf.spec \
 	libmsiecf.spec.in
@@ -55,6 +58,7 @@ EXTRA_DIST = \
 	$(DPKG_FILES) \
 	$(GETTEXT_FILES) \
 	$(PKGCONFIG_FILES) \
+	$(SETUP_PY_FILES) \
 	$(SPEC_FILES)
 
 MAINTAINERCLEANFILES = \
