@@ -1,16 +1,20 @@
 libmsiecf is a library to access the Microsoft Internet Explorer (MSIE) Cache File (index.dat) files.
 
 Project information:
+
 * Status: alpha
 * Licence: LGPLv3+
 
 Work in progress:
+
 * Python 3 support
 
 Planned:
+
 * Multi-threading support
 
 For more information see:
+
 * Project documentation: https://github.com/libyal/libmsiecf/wiki/Home
 * How to build from source: https://github.com/libyal/libmsiecf/wiki/Building
 
