@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libmsiecf],
- [20150708],
+ [20150725],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -225,7 +225,6 @@ AC_CONFIG_FILES([common/types.h])
 AC_CONFIG_FILES([dpkg/changelog])
 AC_CONFIG_FILES([dpkg/copyright])
 AC_CONFIG_FILES([libmsiecf/libmsiecf.rc])
-AC_CONFIG_FILES([pymsiecf/setup.py])
 AC_CONFIG_FILES([libmsiecf.pc])
 AC_CONFIG_FILES([libmsiecf.spec])
 dnl Have configure write its configuration
